# pep-oracle

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  CLAUDE.md  Dockerfile  Dockerfile.ingest  README.md  SETUP.md  pyproject.toml
.agents/: AGENTS.md
.claude/hooks/: pre-commit.sh  session-start.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy.yml  release-on-dep-merge.yml  release-train.yml
cloud/: README.md  diarize_modal.py  transcribe_modal.py
deploy/: pep-oracle-api.service  pep-oracle-backup.service  pep-oracle-ingest.service  pep-oracle-ingest.timer  restore.md  s3-backup-setup.md
docs/: temporal-reranking-plan.md  voice-speaker-id-plan.md
docs/aws/: cold-path-measurement.md  phase1-backfill-runbook.md  phase2a-serving-local-smoke.md  phase2b-oauth-store.md  phase2b2-signing-and-cognito.md  phase2c-deploy-runbook.md  phase2c-lambda-compat-findings.md  phase3-ingestion-runbook.md  phase4-cicd-runbook.md  prebuilt-bm25-index.md
infra/: app.py  cdk.json  conftest.py  package-lock.json  package.json  requirements.txt
infra/pep_oracle_infra/: cert_stack.py  cicd_stack.py  config.py  ingest_stack.py  prod_stack.py
infra/tests/: test_cert_stack.py  test_cicd_stack.py  test_ingest_stack.py  test_prod_stack.py  test_synth.py
scripts/: bootstrap.sh  smoke.py
src/pep_oracle/: _storage.py  authorize_gate.py  backfill.py  backup.py  cache.py  chunking.py  cli.py  config.py  corpus.py  embeddings.py  eval_retrieval.py  feed.py  hybrid.py  (+17 more)
tests/: conftest.py  test_authorize_gate.py  test_backfill.py  test_backup.py  test_cache.py  test_chunking.py  test_clean_episode_topics.py  test_cli.py  test_corpus.py  test_data_integrity_live.py  test_diarize.py  test_embeddings.py  test_eval_retrieval.py  test_eval_retrieval_live.py  test_feed.py  test_hybrid.py  test_ingest.py  test_ingest_artifact.py  test_ingest_topics.py  test_lexical.py  test_manager.py  test_mcp_server.py  test_oauth.py  test_oauth_store.py  test_parse_episode_input.py  test_query.py  test_references.py  test_remap_speakers.py  test_server.py  test_signing.py  test_smoke.py  test_smoke_live.py  test_storage.py  test_store.py  test_temporal.py  test_timing.py  test_topics.py  test_topics_endpoint.py  test_topics_io.py  test_version.py  (+5 more)
(+48 files in other folders)
