[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pep-oracle"
version = "0.1.0"
description = "Transcribe and query the PEP with Chas and Dr Dave podcast"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "click",
    "chromadb",
    "feedparser",
    "modal>=1.4,<2",
    "audioop-lts;python_version>='3.13'",
    "pydub",
    "python-dotenv",
    "requests",
    "fastembed>=0.4",
]

[project.optional-dependencies]
server = ["fastapi", "uvicorn[standard]", "mcp>=1.0", "pyjwt[crypto]>=2.8"]

[project.scripts]
pep-oracle = "pep_oracle.cli:cli"
pep-oracle-server = "pep_oracle.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = ["live: tests that require real database and network (deselected by default)"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
