[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pep-oracle"
version = "0.1.0"
description = "Transcribe and query the PEP with Chas and Dr Dave podcast"
requires-python = ">=3.11"
dependencies = [
    "click",
    "feedparser",
    "modal>=1.4,<2",
    "python-dotenv",
    "requests",
]

[project.optional-dependencies]
server = ["fastapi", "uvicorn[standard]", "mcp>=1.0", "pyjwt[crypto]>=2.8"]
aws = ["boto3>=1.34", "numpy>=1.26", "pyarrow>=15", "mangum>=0.17"]
dev = ["ruff>=0.6.0"]

[project.scripts]
pep-oracle = "pep_oracle.cli:cli"
pep-oracle-server = "pep_oracle.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live' --ignore=infra"
markers = ["live: tests that require real database and network (deselected by default)"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["infra/cdk.out", ".worktrees", "infra/.venv", ".venv"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "mypy>=1.11",
    "boto3>=1.34",
    "pyarrow>=15",
    "mangum>=0.17",
    "moto[dynamodb]>=5",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
check_untyped_defs = true
